test/tests/errors/error-if-com-not-bool.sm
// true
// false
// false
/**/
/**/

program {
    var x: int = 1;
    if (x) {
        x = 4;
    } else {
        x = 5;
    }
}